--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,30 @@
 services:
+  kafka-api-gateway:
+    network_mode: host
+    build:
+      context: .
+      target: kafka-api-gateway
+    env_file:
+      - .env
+    depends_on:
+      - broker-1
+      - broker-2
+      - broker-3
+
+  publish-daemon:
+    network_mode: host
+    build:
+      context: .
+      target: publish-daemon
+    env_file:
+      - .env
+    command: 
+      - --rate=1
+      - --concurrency=10
+      - --seed=42
+    depends_on:
+      - kafka-api-gateway
+
   controller-1:
     image: apache/kafka:4.1.0
     container_name: controller-1
@@ -11,7 +37,13 @@ services:
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     volumes:
-      - ./data/kafka/controller-1:/var/lib/kafka/data
+      - ./data/kafka/controller-1:/tmp/kafka-logs
+    healthcheck:
+      test: ["CMD-SHELL", "bash -c '</dev/tcp/localhost/9093'"]
+      interval: 30s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
 
   controller-2:
     image: apache/kafka:4.1.0
@@ -25,7 +57,13 @@ services:
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     volumes:
-      - ./data/kafka/controller-2:/var/lib/kafka/data
+      - ./data/kafka/controller-2:/tmp/kafka-logs
+    healthcheck:
+      test: ["CMD-SHELL", "bash -c '</dev/tcp/localhost/9093'"]
+      interval: 30s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
 
   controller-3:
     image: apache/kafka:4.1.0
@@ -39,7 +77,13 @@ services:
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     volumes:
-      - ./data/kafka/controller-3:/var/lib/kafka/data
+      - ./data/kafka/controller-3:/tmp/kafka-logs
+    healthcheck:
+      test: ["CMD-SHELL", "bash -c '</dev/tcp/localhost/9093'"]
+      interval: 30s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
 
   broker-1:
     image: apache/kafka:4.1.0
@@ -57,11 +101,14 @@ services:
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     depends_on:
-      - controller-1
-      - controller-2
-      - controller-3
+      controller-1:
+        condition: service_healthy
+      controller-2:
+        condition: service_healthy
+      controller-3:
+        condition: service_healthy
     volumes:
-      - ./data/kafka/broker-1:/var/lib/kafka/data
+      - ./data/kafka/broker-1:/tmp/kafka-logs
 
   broker-2:
     image: apache/kafka:4.1.0
@@ -79,11 +126,14 @@ services:
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     depends_on:
-      - controller-1
-      - controller-2
-      - controller-3
+      controller-1:
+        condition: service_healthy
+      controller-2:
+        condition: service_healthy
+      controller-3:
+        condition: service_healthy
     volumes:
-      - ./data/kafka/broker-2:/var/lib/kafka/data
+      - ./data/kafka/broker-2:/tmp/kafka-logs
 
   broker-3:
     image: apache/kafka:4.1.0
@@ -94,15 +144,26 @@ services:
       KAFKA_NODE_ID: 6
       KAFKA_PROCESS_ROLES: broker
       KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-3:19092,PLAINTEXT_HOST://localhost:39092'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-3:19092,PLAINTEXT_HOST://localhost:49092'
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     depends_on:
-      - controller-1
-      - controller-2
-      - controller-3
+      controller-1:
+        condition: service_healthy
+      controller-2:
+        condition: service_healthy
+      controller-3:
+        condition: service_healthy
+
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui:latest
+    network_mode: host
+    environment:
+      SERVER_PORT: 8081
+      DYNAMIC_CONFIG_ENABLED: 'true'
     volumes:
-      - ./data/kafka/broker-3:/var/lib/kafka/data
+      - ./data/kui:/etc/kafkaui
