--- a/kafka-api-gateway/Cargo.toml
+++ b/kafka-api-gateway/Cargo.toml
@@ -4,3 +4,17 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+dotenvy = "0.15.7"
+ntex = { version = "2.15.2", features = ["tokio"] }
+rdkafka = { version = "0.38.0", features = ["cmake_build"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+log = "0.4"
+env_logger = "0.11"
+anyhow = "1"
+kafka-client = { path = "../kafka-client" }
+clap = { version = "4", features = ["derive", "env"] }
+rand = "0.8"
+uuid = { version = "1", features = ["v4"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
+reqwest = "0.12.23"
