--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,14 @@
+# Rust API Gateway Config
 KAFKA_BROKERS=localhost:29092,localhost:39092,localhost:49092
 KAFKA_TOPIC=reviews
 BIND_ADDRESS="0.0.0.0:8080"
+API_GATEWAY_ENDPOINT="http://localhost:8080"
+RUST_LOG=debug
+
+# Spark Cluster Config
+KAFKA_BOOTSTRAP_SERVERS="broker-1:19092,broker-2:19092,broker-3:19092"
+SPARK_WORKER_INSTANCES=2
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin123
+AWS_ENDPOINT_URL=http://minio:9000
+KAFKA_TOPIC=reviews
