--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 services:
+  # ==== Rust Kafka Gateway ====
   kafka-api-gateway:
     network_mode: host
     build:
@@ -25,6 +26,7 @@ services:
     depends_on:
       - kafka-api-gateway
 
+  # ==== Kafka Cluster ====
   controller-1:
     image: apache/kafka:4.1.0
     container_name: controller-1
@@ -166,4 +168,70 @@ services:
       SERVER_PORT: 8081
       DYNAMIC_CONFIG_ENABLED: 'true'
     volumes:
-      - ./data/kui:/etc/kafkaui
+      - ./kui:/etc/kafkaui
+
+  # ==== Spark Cluster with Object Storage ====
+  spark-stream:
+    build:
+      context: .
+      target: python-app
+    # network_mode: host
+    environment:
+      - KAFKA_TOPIC=reviews
+    env_file:
+      - .env
+    ports:
+      - 4040:4040
+    depends_on:
+      - broker-1
+      - broker-2
+      - broker-3
+      - minio
+    volumes:
+      - ./data/spark-events:/opt/spark-events
+
+  spark-driver:
+    image: apache/spark:4.0.0
+    hostname: driver
+    command: [
+      "/opt/spark/bin/spark-class",
+      "org.apache.spark.deploy.master.Master",
+      "--host", "driver",
+      "--port", "7077",
+      "--webui-port", "8080"
+    ]
+    ports:
+      - 8088:8080
+      - 7077:7077
+
+  spark-worker:
+    image: apache/spark:4.0.0
+    command: [
+      "/opt/spark/bin/spark-class",
+      "org.apache.spark.deploy.worker.Worker",
+      "--webui-port", "8080",
+      "spark://driver:7077",
+    ]
+    environment:
+      - SPARK_WORKER_CORES=2
+      - SPARK_WORKER_MEMORY=2g
+    depends_on:
+      - spark-driver
+
+  minio:
+    image: minio/minio:RELEASE.2025-07-23T15-54-02Z-cpuv1
+    ports:
+      - 9999:9000
+      - 9001:9001
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin123
+    volumes:
+      - ./data/minio:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 10s
