--- a/stream-processor/pyproject.toml
+++ b/stream-processor/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "delta-spark>=4.0.0",
     "minio>=7.2.16",
+    "pymongo>=4.14.1",
     "pyspark>=4.0.0",
     "python-dotenv>=1.1.1",
     "ruff>=0.12.12",
