feature: add webapp for monitoring

--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@ KAFKA_BROKERS=localhost:29092,localhost:39092,localhost:49092
 KAFKA_TOPIC=reviews
 BIND_ADDRESS="0.0.0.0:8080"
 API_GATEWAY_ENDPOINT="http://localhost:8080"
-RUST_LOG=debug
+RUST_LOG=info
 
 # Spark Cluster Config
 KAFKA_BOOTSTRAP_SERVERS="broker-1:19092,broker-2:19092,broker-3:19092"
@@ -11,4 +11,8 @@ SPARK_WORKER_INSTANCES=2
 AWS_ACCESS_KEY_ID=minioadmin
 AWS_SECRET_ACCESS_KEY=minioadmin123
 AWS_ENDPOINT_URL=http://minio:9000
-KAFKA_TOPIC=reviews
+
+# Webapp Config
+MONGO_COLLECTION=reviews
+MONGO_DB_NAME=reviews_db
+MONGO_DB_URI=mongodb://root:example@mongo:27017/?authSource=admin
