--- a/.env.sample
+++ b/.env.sample
@@ -11,6 +11,8 @@ SPARK_WORKER_INSTANCES=2
 AWS_ACCESS_KEY_ID=minioadmin
 AWS_SECRET_ACCESS_KEY=minioadmin123
 AWS_ENDPOINT_URL=http://minio:9000
+MAX_OFFSETS_PER_TRIGGER=10000
+MAX_FILES_PER_TRIGGER=50
 
 # Webapp Config
 MONGO_COLLECTION=reviews
